[package]
name = "regexp-testing-language"
version = "0.1.0"
authors = ["decorator-factory <42166884+decorator-factory@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
regex = "1"
